<resources>
    <string name="app_name">Friend Or Foe</string>
    <string name="start_a_new_game_or_resume_a_current_game">Start a New Game</string>
    <string name="welcome_to_friend_or_foe">WELCOME TO FRIEND OR FOE</string>
    <string name="new_game">New Game</string>
    <string name="current_games">Current Games</string>
    <string name="start_game">Start Game</string>
    <string name="credits">Credits</string>
    <string name="how_to_play">How To Play</string>
    <string name="todo">TODO</string>
    <string name="tanner_t_and_the_charlie_boys">Tanner T and The Charlie Boys</string>
    <string name="enter_phone">Phone #:</string>
    <string name="add_player">Add Player</string>
    <string name="textview">TextView</string>
    <string name="enter_nickname">Name:</string>
    <string name="add">Add</string>
    <string name="player1">Player1</string>
    <string name="_972_439_7977">972-439-7977</string>
    <string name="Credit">Credits</string>
    <string name="nattapatt_white">Nattapatt White</string>
    <string name="darius_bell">Darius Bell</string>
    <string name="ui">UI</string>
    <string name="michael_isome">Michael Isome</string>
    <string name="artistic_guiding">Artistic Guiding</string>
    <string name="programming">Programming</string>
    <string name="kil">Kil</string>
    <string name="name">Name</string>
    <string name="click_on_icon">CLICK ON ICON</string>
    <string name="murder_found">MURDER FOUND!</string>
    <string name="select_the_player_who_was_killed">Select the player(s) who were killed</string>
    <string name="voting">Voting</string>
    <string name="meet_vote"><![CDATA[Meet & Vote]]></string>
    <string name="_10_00">10:00</string>
    <string name="timer">Timer?</string>
    <string name="_10">10</string>
    <string name="_00">00</string>
    <string name="who_is_the_murder">Who is the Murder</string>
    <string name="new_round">New Round</string>
    <string name="watch_video">Watch Video</string>
    <string name="turn_out_the_lights_in_the_room_instruct_the_players_to_walk_carefully_around_the_room_or_building_and_avoid_sticking_together_or_huddling_in_one_area">Turn out the lights in the room. Instruct the players to walk carefully around the room or building and avoid sticking together or huddling in one area.</string>
    <string name="find_a_room_or_building_with_open_space_and_no_sharp_objects_you_don_t_want_to_bump_into_anything_that_can_cause_any_type_of_injury">Find a room or building with open space and no sharp objects. You don’t want to bump into anything that can cause any type of injury</string>
    <string name="k">At least 5 people must be present</string>
    <string name="instructions">Instructions:</string>
    <string name="setting">Setting:</string>
    <string name="requirments">Requirments:</string>
    <string name="click_on_the_video_to_hear_the_instructions_once_agian">Click on the Video to hear the instructions once agian</string>
    <string name="nine_digit">Nine Digit #</string>
    <string name="phone">Phone:</string>
</resources>