<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/instructions"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/click_on_the_video_to_hear_the_instructions_once_agian"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <VideoView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="358dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/Req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/requirments"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/setting"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_a_room_or_building_with_open_space_and_no_sharp_objects_you_don_t_want_to_bump_into_anything_that_can_cause_any_type_of_injury"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/turn_out_the_lights_in_the_room_instruct_the_players_to_walk_carefully_around_the_room_or_building_and_avoid_sticking_together_or_huddling_in_one_area"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>