<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TabHost
        android:id="@+id/TabHostj"
        android:layout_width="383dp"
        android:layout_height="510dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/AddPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/spacer1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@android:color/background_light"
                        android:fontFamily="monospace"
                        android:text="@string/enter_nickname"
                        android:textAlignment="viewStart"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="107dp" />

                    <TextView
                        android:id="@+id/spacer5"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <EditText
                        android:id="@+id/nameText"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/edittexxtt"
                        android:backgroundTintMode="src_over"
                        android:ems="10"
                        android:hint="@string/tanner_t_and_the_charlie_boys"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.506"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="173dp" />

                    <TextView
                        android:id="@+id/spacer2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/EPhone"
                        android:layout_width="373dp"
                        android:layout_height="42dp"
                        android:background="@android:color/background_light"
                        android:backgroundTintMode="src_over"
                        android:text="@string/enter_phone"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="298dp" />

                    <TextView
                        android:id="@+id/spacer6"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/edittexxtt"
                        android:backgroundTintMode="src_over"
                        android:ems="10"
                        android:hint="@string/_972_164_4652"
                        android:inputType="phone"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="359dp" />

                    <TextView
                        android:id="@+id/spacer4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/background_light"
                        android:textColor="@android:color/holo_red_dark" />

                    <Button
                        android:id="@+id/angry_btn"

                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="100dp"
                        android:background="@drawable/buttonshape"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="10"
                        android:text="Add Player"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ViewPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:id="@+id/studentsView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:orientation="vertical">

                        </LinearLayout>

                    </ScrollView>

                    <Button
                        android:id="@+id/Starter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"
                        android:text="Start Game"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>